html complete of all text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
         
 
         <main>
-            <section>
+            <div>
+
+                <h3>
+                    Chilometri da percorrere in viaggio; 
+                </h3>
+
+                <span id="kmt">
+
+                </span>
+
+                <h3>
+                    Età passeggero/a;
+                </h3>
+
+                <span id="età-pass">
+
+                </span>
+
                 <h3>
                     Prezzo ufficiale del biglietto 
                 </h3>
@@ -19,7 +36,8 @@
 
                 </span>
 
-            </section>
+
+            </div>
         </main>
 
 
