continue insert content to css file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
         <title>Biglietto Treno</title>
     </head>
     <body>
-        
+        <div class="topimg-text">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Trenitalia_logo.svg" alt="">
+            <h1>
+                Ticket TrainPrice
+            </h1>
+
+        </div>
+
         <section class="ticketbox">
 
             <div>
