--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             </div>
         </section>
 
+        <div class="check-in-button">
+            <button>
+                Prenota il tuo ticket!
+            </button>
+        </div>
+
 
 
         
