insert all comments

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 
         <title>Biglietto Treno</title>
-        
+
     </head>
     <body>
+
+        <!-- Section lodo and title -->
         <div class="topimg-text">
             <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Trenitalia_logo.svg" alt="">
             <h1>
@@ -23,6 +25,8 @@
             </h1>
 
         </div>
+
+        <!-- Ticketbox -->
 
         <section class="ticketbox">
 
@@ -56,6 +60,8 @@
             </div>
         </section>
 
+        <!-- Button section -->
+
         <div class="check-in-button">
             <button>
                 Prenota il tuo ticket!
@@ -64,7 +70,7 @@
 
 
 
-        
+        <!-- JS Script -->
         <script src="./js/script.js"></script>
     </body>
 
